# claude-agent-core

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
claude_agent_core/: __init__.py  agent.py  memory.py  policy.py  security_fortress.py  security_hardening.py  zero_trust.py
examples/: killer_downloads_organizer.py
